--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,3 +34,21 @@ body {
 .active_option {
   background-color: rgba(255, 255, 255, 0.082);
 }
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #1f263e;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
