--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,3 +52,10 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+.css-aeeyth-MuiInputBase-input-MuiOutlinedInput-input {
+  padding: 8px 5px;
+}
+.css-8j6b76-MuiInputBase-root-MuiOutlinedInput-root {
+  background-color: rgba(248, 249, 251, 1);
+  border: 0;
+}
